--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preload" as="image" href="/public/hero-img.jpg" />
-    <link rel="preload" as="image" href="/public/Rectangle 5.jpg" />
-    <link rel="preload" as="image" href="/public/Rectangle 6.jpg" />
-    <link rel="preload" as="image" href="/public/Rectangle 7.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="preload" as="image" href="/hero-img.jpg" />
+    <link rel="preload" as="image" href="/Rectangle 5.jpg" />
+    <link rel="preload" as="image" href="/Rectangle 6.jpg" />
+    <link rel="preload" as="image" href="/Rectangle 7.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homestay Africa</title>
   </head>
