--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preload" as="image" href="/hero-img.jpg" />
+    <link rel="preload" as="image" href="/homestay-frontend.svg" />
     <link rel="preload" as="image" href="/Rectangle 5.jpg" />
     <link rel="preload" as="image" href="/Rectangle 6.jpg" />
     <link rel="preload" as="image" href="/Rectangle 7.jpg" />
