code splitting with lazy loading

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preload" as="image" href="/hero-img.jpg" />
+    <link rel="preload" as="image" href="/video-poster.webp" />
     <link rel="preload" as="image" href="/homestay-frontend.svg" />
-    <link rel="preload" as="image" href="/Rectangle 5.jpg" />
-    <link rel="preload" as="image" href="/Rectangle 6.jpg" />
-    <link rel="preload" as="image" href="/Rectangle 7.jpg" />
+    <link rel="preload" as="image" href="/Rectangle 5.webp" />
+    <link rel="preload" as="image" href="/Rectangle 6.webp" />
+    <link rel="preload" as="image" href="/Rectangle 7.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homestay Africa</title>
   </head>
